Update manifest.json for app details and icons
Updated application name, short name, and description in the manifest. Changed icon sources and types for better compatibility.

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,15 +1,29 @@
 {
-  "short_name": "Mes Recettes",
-  "name": "Gestionnaire de Recettes",
+  "name": "Mes Recettes - Famille",
+  "short_name": "Recettes",
+  "description": "Application de gestion de recettes familiales",
+  "start_url": "/",
+  "display": "standalone",
+  "background_color": "#FFF7ED",
+  "theme_color": "#EA580C",
+  "orientation": "portrait-primary",
   "icons": [
     {
-      "src": "data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>🍳</text></svg>",
+      "src": "/web-app-manifest-192x192.png",
       "sizes": "192x192",
-      "type": "image/svg+xml"
+      "type": "image/png",
+      "purpose": "any maskable"
+    },
+    {
+      "src": "/web-app-manifest-512x512.png",
+      "sizes": "512x512",
+      "type": "image/png",
+      "purpose": "any maskable"
+    },
+    {
+      "src": "/apple-touch-icon.png",
+      "sizes": "180x180",
+      "type": "image/png"
     }
-  ],
-  "start_url": ".",
-  "display": "standalone",
-  "theme_color": "#ea580c",
-  "background_color": "#ffffff"
+  ]
 }
